Customise main page

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <div id="googlemap" style="width: 500px; height: 400px;">
-    
+  <div class="map">
+  <div id="googlemap" class="map__canvas" style="position: relative; overflow: hidden; transform: translateZ(0px); background-color: rgb(229, 227, 223);">
+  <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%; z-index: 0; cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur) 8 8, default;">
+  </div>
+  </div>
   </div>
 </div>
