--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -14,6 +14,46 @@ body {
   padding: 0;
 }
 
+/* Google Map styling */
+.map {
+  margin: 1rem auto 0 auto;
+  position: relative;
+  width: 100%; }
+  @media only screen and (min-width: 30em) {
+    .map {
+      margin: 4rem auto 2rem auto; } }
+  .map .map__address {
+    font-size: 2rem;
+    padding: 0;
+    z-index: 3000;
+    text-align: center;
+    margin: 1rem 0;
+    color: #999999;
+    display: none; }
+    @media only screen and (min-width: 30em) {
+      .map .map__address {
+        height: 30rem;
+        font-size: 3.2rem;
+        padding: 1rem;
+        width: 25%;
+        position: absolute;
+        text-align: right;
+        background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
+        bottom: 0;
+        margin: 0;
+        right: 0;
+        color: #000000; } }
+  .map .map__canvas {
+    height: 15rem;
+    position: relative;
+    width: 100%;
+    background: #ffffff !important;
+    margin: 1rem auto 0 auto; }
+    @media only screen and (min-width: 30em) {
+      .map .map__canvas {
+        height: 30rem;
+        margin: 4rem auto 2rem auto; } }
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
