--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,8 +1,12 @@
 <div class="container">
-  <div class="map">
-  <div id="googlemap" class="map__canvas" style="position: relative; overflow: hidden; transform: translateZ(0px); background-color: rgb(229, 227, 223);">
-  <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%; z-index: 0; cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur) 8 8, default;">
+  <div ng-show="stations" class="map">
+    <div id="googlemap" class="map__canvas" style="position: relative; overflow: hidden; transform: translateZ(0px); background-color: rgb(229, 227, 223);">
+      <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%; z-index: 0; cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur) 8 8, default;">
+      </div>
+    </div>
   </div>
-  </div>
+
+  <div ng-hide="stations">
+    LOADING!!
   </div>
 </div>
