Update logo to a smaller one Add station brands to database table and in the detail of stations in info window

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -7,6 +7,10 @@
           </div>
       </div>
     </div>
+    
+    <div ng-hide="stations" align="center">
+      LOADING!!
+    </div>
   </div>
   <div class="col-md-2">
     <select>
@@ -24,8 +28,5 @@
                 rz-slider-tpl-url="rzSliderTpl.html"></rzslider>
 
 
-  <div ng-hide="stations">
-    LOADING!!
-  </div>
 
 </div>
