--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 style="color:black;"><center><b>PUMP IT UP!</b></center></h1>
-  <div class="col-md-10">
+  <div class="col-md-8">
     <div ng-show="stations" class="map">
       <div id="googlemap" class="map__canvas" style="position: relative; overflow: hidden; transform: translateZ(0px); background-color: rgb(229, 227, 223);">
           <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%; z-index: 0; cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur) 8 8, default;">
@@ -8,8 +8,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-2">
-    <select>
+  <div class="col-md-4">
+    <select ng-model="selected.fuel">
         <option select="selected">What's your fucking fuel?</option>
         <option value="">Diesel</option>
         <option value="">Unleaded</option>
@@ -17,15 +17,20 @@
         <option value="">Premium 98</option>
     </select>
 
+    <br>
+    I'm willing to travel a maximum of {{ distanceSlider | json }} km
     <rzslider rz-slider-model="distanceSlider"
-                rz-slider-floor="50"
-                rz-slider-ceil="450"
+                rz-slider-floor="0.5"
+                rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"
                 rz-slider-tpl-url="rzSliderTpl.html"></rzslider>
 
+  </div>
 
   <div ng-hide="stations">
-    LOADING!!
+    MAP IS LOADING!!
   </div>
 
 </div>
+
+
