--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -28,7 +28,7 @@
                 rz-slider-always-show-bar="true"
                 rz-slider-tpl-url="rzSliderTpl.html"></rzslider>
 
-    <button ng-click="cheapestStations()">Update</button>
+    <button ng-click="cheapestStations(); findCheapestWithinDistance(distanceSlider)">Update</button>
   </div>
 
 </div>
