--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -11,7 +11,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 }
 
 body {
-  padding: 0;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 /* Google Map styling */
