--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -27,7 +27,7 @@
       
       <center><div ng-hide="stations">
         Searching for stations around you...
-        <i class="fa fa-refresh fa-spin"></i>
+        <i class="fa fa-3x fa-spinner fa-pulse"></i>
       </div></center>
     </div>
 
