--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -5,8 +5,8 @@
   <div style="position: absolute; top: 12%; width: 100%; z-index: 2;">
     <div class="col-md-12">
         <center>
-        <h1 style="color:white; font-size:6rem;">Save $ Everytime You Come With Us!</h1><br>
-        <h4 style="color:white; font-size:3rem;">We provide the best data on fuel prices around you</h4>
+        <h1 style="color:white; font-size:6rem;"><b>Why Pay More?</b></h1><br>
+        <h4 style="color:white; font-size:3rem;"><b>We provide the best data on fuel prices around you</b></h4>
         </center>
     </div>
   </div>
@@ -25,29 +25,35 @@
       </div>
       
       
-      <center><div ng-hide="stations">
-        Searching for stations around you...
-        <i class="fa fa-3x fa-spinner fa-pulse"></i>
-      </div></center>
+      <center>
+        <div ng-hide="stations" style="display: table; height: 400px; overflow: hidden;">
+         <div style="display: table-cell; vertical-align: middle;">
+           <div>
+             <p style="font-size:2.5rem;">Loading...</p>
+             <i class="fa fa-3x fa-spinner fa-pulse"></i>
+           </div>
+         </div>
+        </div>
+      </center>
     </div>
 
     <!-- Filter options -->
-    <div class="col-md-4">
+    <div class="col-md-4" style="font-size:20px;">
       <br><br>
       <div class="panel panel-default">
           <div class="panel-body">
             <p>What is your fuel type?</p>
           <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <select class="selectpicker" ng-model="selected.fuel" ng-init="selected.fuel = types[0]">
+              <center>
+              <select class="selectpicker" ng-model="selected.fuel" ng-init="selected.fuel = types[0]" style="width:80%;">
                 <option ng-repeat="type in types" value="{{type}}">{{type}}</option>
               </select>
-            </button>
+              </center>
           </div>
           </div>
           <div class="panel-body">
-              I'm willing to travel a maximum of {{ distanceSlider | json }} km
-              <br><br>
+              I'm willing to travel a maximum of <b>{{ distanceSlider | json }}</b> km
+              <p style="font-size:12px;"><i>(move the slider below)</i></p>
               <div>
                 <rzslider rz-slider-model="distanceSlider"
                           rz-slider-floor="1"
@@ -58,7 +64,7 @@
           </div>
       </div>
       <center>
-          <button type="button" class="btn btn-warning" ng-click="cheapestStations(); findCheapestWithinDistance(distanceSlider)">
+          <button type="button" class="btn btn-lg btn-warning" ng-click="cheapestStations(); findCheapestWithinDistance(distanceSlider)">
             Show me the cheapest station!
           </button>
       </center>
@@ -95,10 +101,8 @@
 </div>
 </div>
 
-<button type="button" class="btn btn-warning" ng-click="calcSavings()">Show Me!</button>
+<button type="button" class="btn btn-lg btn-warning" ng-click="calcSavings()">Show Me!</button>
 <br><br>
-
-<!--     <button ng-click="cheapestStations(); findCheapestWithinDistance(distanceSlider)">Update</button> -->
 
 <h3 ng-show="calculatorInput.savings"><b>You could potentially save ${{calculatorInput.savings}} every year!</b></h3>
 <br><br>
