--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -66,7 +66,7 @@ body {
         height: 40rem; } }
 
 .savingsCalculator{
-  background-image: url('../images/background.jpg');
+  background-image: url('../images/savepetrol-calculator-bg.jpg');
 }
 
 .slideUp{
