--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -6,7 +6,7 @@
     <div class="col-md-12">
         <center>
         <h1 style="color:white; font-size:6rem;"><b>Why Pay More?</b></h1><br>
-        <h4 style="color:white; font-size:3rem;"><b>We provide the best data on fuel prices around you</b></h4>
+        <h4 style="color:white; font-size:3rem;"><b>When we provide the best fuel prices around you</b></h4>
         </center>
     </div>
   </div>
@@ -74,7 +74,7 @@
 <!-- Cost savings calculator -->
 <div class="savingsCalculator" align="center">
     <br>
-    <h2 style="color:white;">How much can you save with us !?</h2>
+    <h2 style="color:white;">How much can you save with us ?</h2>
     <br>
 
     <div class="col-md-4">
