--- a/client/app/views/savingsModal.html
+++ b/client/app/views/savingsModal.html
@@ -4,11 +4,11 @@
 <div class="modal-body">
     <center>
     <div ng-if="savings < 75">
-        <h3>That's equivalent to sponsor 2 children's immunisation in a third-world country</h3>
+        <h3>That's equivalent to sponsoring 2 children's immunisation in a third-world country</h3>
         <img src="images/immunisation.jpg" style="display:block; margin-left:auto; margin-right:auto;"/>
     </div>
     <div ng-if="savings >= 75 && savings <= 140">
-        <h3>That's equivalent to Provide clean drinking water to 3 families in a third-world country</h3>
+        <h3>That's equivalent to providing clean drinking water to 3 families in a third-world country</h3>
         <img src="images/water.jpg" style="display:block; margin-left:auto; margin-right:auto;"/>
     </div>
     <div ng-if="savings > 140">
