--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -14,7 +14,7 @@
 <br><br>
 
 <div style="padding-right: 20px; padding-left: 20px;">
-<h1 style="color:black;font-size: 5rem;"><center><b>PUMP IT UP!</b></center></h1>
+<h1 style="color:black;font-size: 4rem;"><center><b>DISCOVER THE BEST <br> FUEL PRICES AROUND YOU!</b></center></h1>
   <div class="row">
     <div class="col-md-8">
       <div ng-show="stations" class="map">
@@ -70,6 +70,7 @@
       </center>
     </div>
   </div>
+</div>
 
 <!-- Cost savings calculator -->
 <div class="savingsCalculator" align="center">
@@ -97,7 +98,7 @@
 
     <div class="col-md-4">
         <div class="thumbnail" style="height:100px;">
-            <h4>How often do you go to the petrol station every month?</h4>
+            <h4>How often do you pump petrol every month?</h4>
             <input type="number" ng-model="calculatorInput.freq" min="0" max="60" required="true" style="width:80%">
             <br><br>
         </div>
