Edit messages for the costs savings results

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -99,7 +99,7 @@
     <div class="col-md-4">
         <div class="thumbnail" style="height:100px;">
             <h4>How often do you pump petrol every month?</h4>
-            <input type="number" ng-model="calculatorInput.freq" min="0" max="60" required="true" style="width:80%">
+            <input type="number" ng-model="calculatorInput.freq" min="0" style="width:80%">
             <br><br>
         </div>
     </div>
