--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -75,7 +75,7 @@
 <!-- Cost savings calculator -->
 <div class="savingsCalculator" align="center">
     <br>
-    <h2 style="color:white;">How much can you save with us ?</h2>
+    <h2 style="color:white;">Find out how much you can potentially save </h2>
     <br>
 
     <div class="col-md-4">
